[package]
name = "json-ptr"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
keywords = ["json", "json-pointer"]
description = "RFC 6901, JavaScript Object Notation (JSON) Pointer"
repository = "https://github.com/dr-bonez/json-ptr"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imbl = "2"
imbl-value = { git = "https://github.com/Start9Labs/imbl-value.git" }
serde = "1"
thiserror = "1"
